Fixed: Syntax errors in the editor (like non-matching closing XML tags) were shown in the same color as the foreground which made them not readable

--- a/src/client/less/view.less
+++ b/src/client/less/view.less
@@ -85,6 +85,11 @@ footer {
     // The original selection background of the railscasts theme is nearly not visible
     background: lighten(@colorEditorBg, 10%) !important;
   }
+
+  span.cm-error {
+    // The original error background has the same color as the foreground (#da4939) which makes the text not readable
+    background: #8c0e00;
+  }
 }
 
 .mode-createUser {
